# herdr-reviewr

./: .editorconfig  CHANGELOG.md  Cargo.toml  LICENSE  README.md  deny.toml  herdr-plugin.toml  justfile
.github/workflows/: ci.yml
docs/: RELEASING.md
docs/plans/2026-06-23-changes-tab/: plan.md
docs/plans/2026-06-24-diff-viewer/: polish-backlog.md
docs/plans/2026-06-25-all-files-tab/: 01-all-files-browser.md  02-review-surface.md  main.md
docs/plans/2026-06-25-comment-editor/: plan.md
docs/plans/2026-06-25-last-turn-scope/: plan.md
specs/: README.md  diff-view.md  file-list.md  herdr-host.md  overview.md  review-model.md  spec-template.md  tui.md
src/: app.rs  config.rs  diff.rs  export.rs  file_list.rs  forge.rs  git.rs  herdr.rs  lib.rs  log.rs  main.rs  model.rs  turn.rs  ui.rs
tests/: app_flow.rs  git_repo.rs  render.rs
tests/common/: mod.rs
