[package]
name = "herdr-review"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A herdr-native review sidebar: browse an agent's changes and send comments back to chat, in the terminal."
authors = ["Dmitry Persiyanov <dmitry.persiyanov@gmail.com>"]
license = "MIT"
repository = "https://github.com/persijano/herdr-review"
readme = "README.md"
keywords = ["herdr", "tui", "diff", "review", "agent"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"

[lints.rust]
unsafe_code = "forbid"
unreachable_pub = "warn"
missing_debug_implementations = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Pragmatic allows for an application binary (vs a public library):
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"

[profile.release]
strip = true
lto = "thin"
